Fixed visible collapsed fieldset content

--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -50,6 +50,10 @@ fieldset {
     legend:before {
       content: "\e601";
     }
+    
+    .fieldset-wrapper {
+      display:none;
+    }
   }
 
   .fieldset-wrapper {
